tests/generics/decl_marker_bound_violations.err.expected
error: at 10:30: [COMP-CopyMarkerNotSatisfied] In struct 'ClaimsCopy' (marked Copy), field 'inner' has type T which is not Copy
    |
 10 | struct<T> ClaimsCopy: Copy { inner: T }
    |                              ^^^^^^^^
error: at 13:36: [COMP-DropMarkerNotSatisfied] In struct 'ClaimsDrop' (marked Drop), field 'inner' has type T which is not Drop
    |
 13 | struct<T: Copy> ClaimsDrop: Drop { inner: T }
    |                                    ^^^^^^^^
error: at 16:44: [COMP-CopyMarkerNotSatisfied] In struct 'ClaimsCopyFromMove' (marked Copy), field 'inner' has type T which is not Copy
    |
 16 | struct<T: Move> ClaimsCopyFromMove: Copy { inner: T }
    |                                            ^^^^^^^^
error: at 19:32: [COMP-CopyMarkerNotSatisfied] In enum 'ClaimsCopyEnum' (marked Copy), variant 'A' payload type T is not Copy
    |
 19 | enum<T> ClaimsCopyEnum: Copy { A: T B: unit }
    |                                ^^^^
