tests/generics/decl_marker_bound_violations.sim
# Decl-side marker violations under scope-aware class_of.
#
# Each struct claims a marker its field type-parameter can't
# guarantee — the param has weaker (or no) bounds than what the
# claim requires. `check_struct` builds a scope from the decl's
# `type_params` and computes `class_of(field, env, scope)`, so
# these get flagged as compositional inconsistencies.

# T has no bounds → class_of(T) is empty. Claiming Copy fails.
struct<T> ClaimsCopy: Copy { inner: T }

# T is Copy but not Drop → claiming Drop fails.
struct<T: Copy> ClaimsDrop: Drop { inner: T }

# T is only Move → claiming Copy fails (Copy is orthogonal to Move).
struct<T: Move> ClaimsCopyFromMove: Copy { inner: T }

# Enum variant payload: same rule as struct fields.
enum<T> ClaimsCopyEnum: Copy { A: T B: unit }

fn main() {
  entry:
    return
}
